syntax = "proto3";

package auth;
option go_package = "auth/v1;authv1";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}

  rpc Login(LoginRequest) returns (LoginResponse) {}

  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message RegisterRequest {
  string email = 1;
  string login = 2;
  string password = 3;
}

message RegisterResponse { string id = 1; }

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse { string token = 1; }

message ValidateRequest { string token = 1; }

message ValidateResponse {
  string id = 1;
  string email = 2;
  string login = 3;
  string role = 4;
}
